2015-03-17  Philippe Normand  <pnormand@igalia.com>

        [GTK] basic OpenWebRTC build support
        https://bugs.webkit.org/show_bug.cgi?id=142393

        Reviewed by Carlos Garcia Campos.

        * gtk/jhbuild.modules: Add OpenWebRTC and its dependencies. This
        is not the upstream OpenWebRTC repository. This temporary fork
        contains a few patches needed by WebKit for audio/video rendering.

2015-03-17  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [CMake][EFL] Build test tools only for developer mode
        https://bugs.webkit.org/show_bug.cgi?id=142761

        Reviewed by Csaba Osztrogonác.

        Do not build EFL MiniBrowser, WebKitTestRunner, and ImageDiff on production mode.

        * CMakeLists.txt:

2015-03-17  Joseph Pecoraro  <pecoraro@apple.com>

        Remove never used "useLayerOnTop" bindings generator argument
        https://bugs.webkit.org/show_bug.cgi?id=142773

        Reviewed by Darin Adler.

        * WebKitTestRunner/InjectedBundle/Bindings/CodeGeneratorTestRunner.pm:
        (new):

2015-03-16  Ryosuke Niwa  <rniwa@webkit.org>

        Enable ES6 classes by default
        https://bugs.webkit.org/show_bug.cgi?id=142774

        Reviewed by Gavin Barraclough.

        * Scripts/webkitperl/FeatureList.pm:

2015-03-16  Alexey Proskuryakov  <ap@apple.com>

        Fix webkitpy tests after r181585.

        Looks like "me" cannot be anyone's email, it's a special case.

        * Scripts/webkitpy/common/config/contributors.json:

2015-03-16  Alexey Proskuryakov  <ap@apple.com>

        Add tolerance to WebAudio tests
        https://bugs.webkit.org/show_bug.cgi?id=142676

        Reviewed by Tim Horton.

        * Scripts/webkitpy/common/wavediff.py: Added. Based on Jer Noble's work.

        * Scripts/webkitpy/layout_tests/controllers/test_result_writer.py:
        (TestResultWriter.create_audio_diff_and_write_result):
        * Scripts/webkitpy/layout_tests/models/test_failures.py: